Issues should link to the issue tracker.
http://code.google.com/p/phantomjs/issues/detail?id=863

--- a/release-1.8.html
+++ b/release-1.8.html
@@ -82,30 +82,30 @@
 <p><strong>New features</strong></p>
 
 <ul>
-    <li>Integrated GhostDriver as the WebDriver implementation (issue 39)
-    <li>Added an option to specify the SSL protocol (issue 174)
-    <li>Added encoding support for WebServer's response (issue 505)
-    <li>Added process ID (PID) to the System module (issue 769)
-    <li>Added properties to obtain page and frame title (issue 799)
-    <li>Added page navigation methods (issue 808)
-    <li>Added a limit for authentication attempts (issue <a href="http://code.google.com/p/phantomjs/issues/details?id=826">826</a>)
-    <li>Added support for modifier keys in keyboard events (issue 835)
-    <li>Added onFilePicker callback for more generic file upload API (issue 843)
-    <li>Added the ability to set the page content and location (issue 909)
+    <li>Integrated GhostDriver as the WebDriver implementation (issue <a href="http://code.google.com/p/phantomjs/issues/detail?id=39">39</a>)
+    <li>Added an option to specify the SSL protocol (issue <a href="http://code.google.com/p/phantomjs/issues/detail?id=174">174</a>)
+    <li>Added encoding support for WebServer's response (issue <a href="http://code.google.com/p/phantomjs/issues/detail?id=505">505</a>)
+    <li>Added process ID (PID) to the System module (issue <a href="http://code.google.com/p/phantomjs/issues/detail?id=769">769</a>)
+    <li>Added properties to obtain page and frame title (issue <a href="http://code.google.com/p/phantomjs/issues/detail?id=799">799</a>)
+    <li>Added page navigation methods (issue <a href="http://code.google.com/p/phantomjs/issues/detail?id=808">808</a>)
+    <li>Added a limit for authentication attempts (issue <a href="http://code.google.com/p/phantomjs/issues/detail?id=826">826</a>)
+    <li>Added support for modifier keys in keyboard events (issue <a href="http://code.google.com/p/phantomjs/issues/detail?id=835">835</a>)
+    <li>Added onFilePicker callback for more generic file upload API (issue <a href="http://code.google.com/p/phantomjs/issues/detail?id=843">843</a>)
+    <li>Added the ability to set the page content and location (issue <a href="http://code.google.com/p/phantomjs/issues/detail?id=909">909</a>)
 </ul>
 
 <p><strong>Improvements</strong></p>
 
 <ul>
-    <li>Fixed date parsing in ISO8601 format (issue <a href="http://code.google.com/p/phantomjs/issues/details?id=187">187</a> ,<a href="http://code.google.com/p/phantomjs/issues/details?id=267">267</a>)
-    <li>Deregistered multiple callback handler (issue 807)
-    <li>Fixed sending of double-click events (issue 848)
-    <li>Increases maximum number of redirects (issue 849)
-    <li>Fixed keycodes sent for lowercase characters (issue 852)
-    <li>Fixed a regression in table row page break (issue 880)
-    <li>Completed the CoffeeScript version of the examples (issue 907)
-    <li>Updated Qt to version 4.8.4 (issue 918)
-    <li>Fixed potential hang in some example scripts (issue 922)
+    <li>Fixed date parsing in ISO8601 format (issue <a href="http://code.google.com/p/phantomjs/issues/detail?id=187">187</a>, <a href="http://code.google.com/p/phantomjs/issues/detail?id=267">267</a>)
+    <li>Deregistered multiple callback handler (issue <a href="http://code.google.com/p/phantomjs/issues/detail?id=807">807</a>)
+    <li>Fixed sending of double-click events (issue <a href="http://code.google.com/p/phantomjs/issues/detail?id=848">848</a>)
+    <li>Increases maximum number of redirects (issue <a href="http://code.google.com/p/phantomjs/issues/detail?id=849">849</a>)
+    <li>Fixed keycodes sent for lowercase characters (issue <a href="http://code.google.com/p/phantomjs/issues/detail?id=852">852</a>)
+    <li>Fixed a regression in table row page break (issue <a href="http://code.google.com/p/phantomjs/issues/detail?id=880">880</a>)
+    <li>Completed the CoffeeScript version of the examples (issue <a href="http://code.google.com/p/phantomjs/issues/detail?id=907">907</a>)
+    <li>Updated Qt to version 4.8.4 (issue <a href="http://code.google.com/p/phantomjs/issues/detail?id=918">918</a>)
+    <li>Fixed potential hang in some example scripts (issue <a href="http://code.google.com/p/phantomjs/issues/detail?id=922">922</a>)
 </ul>
 
 <p><strong>Known Issues on Microsoft Windows</strong></p>
@@ -129,3 +129,4 @@
 </div>
 </body>
 </html>
+
