Minor tweak, make it shorter.

--- a/release-1.8.html
+++ b/release-1.8.html
@@ -120,8 +120,7 @@ driver.quit</pre>
 </p>
 
 <p>
-    Bindings for your favourite programming language have being provided, and can be found in
-    <a href="https://code.google.com/p/selenium/downloads/list">releases of Selenium >= 2.27</a>:
+    Bindings for your favourite programming language can be found in <a href="https://code.google.com/p/selenium/downloads/list">Selenium &gt;= 2.27</a>:
     <table>
     <thead>
         <tr>
