--- a/releases.html
+++ b/releases.html
@@ -76,6 +76,8 @@
 
 <div class="grid_10">
 
+    <p><a href="release-1.8.html">PhantomJS 1.8</a> "Blue Winter Rose", was released on December 21, 2012. It integrated GhostDriver, a remote WebDriver (Wire Protocol) implementationi, and many related API addition.</p>
+
     <p><a href="release-1.7.html">PhantomJS 1.7</a> "Blazing Star", was released on September 22, 2012. It added module system support (modelled after CommonJS), better cookies handling, and other small improvements.</p>
 
     <p><a href="release-1.6.html">PhantomJS 1.6</a> "Lavender" was released on June 20, 2012. It is a minor update with some improvements on the rendering and script evaluation, as well as various bug fixes.</p>
