--- a/release-1.8.html
+++ b/release-1.8.html
@@ -89,7 +89,7 @@ table td,table th {
 
 <p><strong>Note:</strong> The release notes are still being worked on, more information may become available in the next few days. Please bear with us!</p>
 
-<p>PhantomJS 1.8, <a href="release-names.html">Blue Winter Rose</a>, was released on December 21, 2012. It integrated Ghost Driver, an implementation of WebDriver Wire Protocol.</p>
+<p>PhantomJS 1.8, <em><a href="release-names.html">Blue Winter Rose</a></em>, was released on December 21, 2012. It integrated Ghost Driver, an implementation of WebDriver Wire Protocol.</p>
 
 <p><strong>WebDriver support via Ghost Driver integration</strong></p>
 
