Download: Link to the 64-bit Linux binary package of 1.8.0.
http://code.google.com/p/phantomjs/issues/detail?id=863

--- a/download.html
+++ b/download.html
@@ -78,8 +78,8 @@
         <p><strong>Warning</strong>: MacPorts does not have updated PhantomJS build yet. Installing via MacPorts is not recommended.</p>
 
         <h2 id="linux">Linux</h2>
-        <p>For 32-bit system, download <a href="http://phantomjs.googlecode.com/files/phantomjs-1.7.0-linux-i686.tar.bz2">phantomjs-1.7.0-linux-i686.tar.bz2</a> (12.4 MB).</p>
-        <p>For 64-bit system, download <a href="http://phantomjs.googlecode.com/files/phantomjs-1.7.0-linux-x86_64.tar.bz2">phantomjs-1.7.0-linux-x86_64.tar.bz2</a> (12.6 MB).</p>
+        <p>For 64-bit system, download <a href="http://phantomjs.googlecode.com/files/phantomjs-1.8.0-linux-x86_64.tar.bz2">phantomjs-1.8.0-linux-x86_64.tar.bz2</a> (13 MB).</p>
+        <p>Coming soon: binary package for 32-bit system.</p>
     </ul>
 
         <p>This package is built on Ubuntu Lucid (10.04). It should run successfully on Lucid or more modern systems (including other distributions). There is no requirement to install Qt, WebKit, or any other libraries. It is however expected that some base libraries necessary for rendering (<a href="http://www.freetype.org/">FreeType</a>, <a href="http://www.freedesktop.org/wiki/Software/fontconfig">Fontconfig</a>) and the basic font files are available in the system.</p>
