ChangeLog: Add missing window.location fix.
http://code.google.com/p/phantomjs/issues/detail?id=863

--- a/release-1.8.html
+++ b/release-1.8.html
@@ -183,6 +183,7 @@ driver.quit</pre>
 
 <ul>
     <li>Fixed date parsing in ISO8601 format (issue <a href="http://code.google.com/p/phantomjs/issues/detail?id=187">187</a>, <a href="http://code.google.com/p/phantomjs/issues/detail?id=267">267</a>)
+    <li>Fixed window.location (issue <a href="http://code.google.com/p/phantomjs/issues/detail?id=530">530</a>, <a href="http://code.google.com/p/phantomjs/issues/detail?id=632">632</a>)
     <li>Deregistered multiple callback handler (issue <a href="http://code.google.com/p/phantomjs/issues/detail?id=807">807</a>)
     <li>Fixed sending of double-click events (issue <a href="http://code.google.com/p/phantomjs/issues/detail?id=848">848</a>)
     <li>Increases maximum number of redirects (issue <a href="http://code.google.com/p/phantomjs/issues/detail?id=849">849</a>)
