--- a/release-1.8.html
+++ b/release-1.8.html
@@ -194,6 +194,12 @@ driver.quit</pre>
     <li>Fixed potential hang in some example scripts (issue <a href="http://code.google.com/p/phantomjs/issues/detail?id=922">922</a>)
 </ul>
 
+<p><strong>Fix in 1.8.1</strong></p>
+
+<ul>
+    <li>Mac OS X: Fix possible crash when using some TrueType fonts (issue <a href="http://code.google.com/p/phantomjs/issues/detail?id=690">690</a>)
+</ul>
+
 <p><strong>Known Issues on Microsoft Windows</strong></p>
 
 <ul>
