Edited for clarity - Added Centos/RHEL to Amazon line.

--- a/build.html
+++ b/build.html
@@ -92,7 +92,7 @@ git checkout 1.8
 </pre>
 
         <p>For Amazon EC2 AMI (tested on AMI release 2011.09 and 2012.03):</p>
-
+        <p> * will also work on Centos & RHEL 6, tested on Centos 6.3 </p>
 <pre>
 sudo yum install gcc gcc-c++ make git openssl-devel freetype-devel fontconfig-devel
 git clone git://github.com/ariya/phantomjs.git
