Add fixes for 1.8.2.
http://code.google.com/p/phantomjs/issues/detail?id=863

--- a/release-1.8.html
+++ b/release-1.8.html
@@ -200,6 +200,16 @@ driver.quit</pre>
     <li>Mac OS X: Fix possible crash when using some TrueType fonts (issue <a href="http://code.google.com/p/phantomjs/issues/detail?id=690">690</a>)
 </ul>
 
+<p><strong>Fixes in 1.8.2</strong></p>
+
+<ul>
+    <li>Fixed possible PDF error due to invalid CreationDate field (issue <a href="http://code.google.com/p/phantomjs/issues/detail?id=663">663</a>)
+    <li>Fixed crash when uploading non existing files (issue <a href="http://code.google.com/p/phantomjs/issues/detail?id=941">941</a>)
+    <li>Fixed possible crash when accessing inline frames (issue <a href="http://code.google.com/p/phantomjs/issues/detail?id=947">947</a>)
+    <li>Extended SSL ignore setting to synchronous XHR (issue <a href="http://code.google.com/p/phantomjs/issues/detail?id=985">985</a>)
+    <li>Fixed incorrect date handling in the cookies (issue <a href="http://code.google.com/p/phantomjs/issues/detail?id=1068">1068</a>)
+</ul>
+
 <p><strong>Known Issues on Microsoft Windows</strong></p>
 
 <ul>
