Point to the new bug tracker.

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ var <span class="object">url</span> = <span class="literal">'http://www.phantomj
             <a href="https://groups.google.com/forum/#!forum/phantomjs" id="link-ml">Join the mailing list</a>
         </li>
         <li>
-            <a href="http://code.google.com/p/phantomjs/issues" id="link-bugs">Report bugs</a>
+            <a href="https://github.com/ariya/phantomjs/issues" id="link-bugs">Report bugs</a>
         </li>
     </ul>
 </div>
