--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 No browser required
             </h1>
             <p class="explanation">
-                PhantomJS is a headless WebKit with JavaScript API.
+                PhantomJS is a headless WebKit scriptable with a JavaScript API.
                 It has <strong>fast</strong> and <strong>native</strong> support for various web standards: 
                 DOM handling, CSS selector, JSON, Canvas, and SVG.<br>
                 PhantomJS is created by <a href="http://twitter.com/AriyaHidayat">Ariya Hidayat</a>.
