--- a/release-1.9.html
+++ b/release-1.9.html
@@ -87,7 +87,9 @@ table td,table th {
 
 <div class="grid_10">
 
-<p>PhantomJS 1.9 is still being developed. It is scheduled to be released on March 20, 2013.</p>
+<p><strong>Note:</strong> The release notes are still being worked on, more information may become available in the next few days. Please bear with us!</p>
+
+<p>PhantomJS 1.9, <em><a href="release-names.html">Sakura</a></em>, was released on March 20, 2013.</p>
 
 <p><strong>New features</strong></p>
 
