Linux build: Precise, also ensure we update the package list.

--- a/build.html
+++ b/build.html
@@ -81,9 +81,10 @@ git checkout 1.8
 
         <h2 id="linux">Linux</h2>
 
-        <p>For Ubuntu Linux (tested on a barebone install of Ubuntu 10.04 Lucid Lynx and Ubuntu 11.04 Natty Narwhal):</p>
+        <p>For Ubuntu Linux (tested on a barebone install of Ubuntu 10.04 Lucid Lynx, Ubuntu 11.04 Natty Narwhal, Ubuntu 12.04 Precise Pangolin):</p>
 
         <pre>
+sudo apt-get update
 sudo apt-get install build-essential chrpath git-core libssl-dev libfontconfig1-dev
 git clone git://github.com/ariya/phantomjs.git
 cd phantomjs
