Linux: Note the build time on Amazon EC2 AMI.

--- a/build.html
+++ b/build.html
@@ -109,6 +109,8 @@ cd rpm
 ./mkrpm.sh phantomjs 
 </pre>
 
+        <p><strong>Note 3</strong>: Compile time for Ubuntu 12.04 running on Amazon EC2 <em>M1 Large</em> (m1.large, 2 cores): 50 minutes, <em>M1 Medium</em> (m1.medium, 1 core): 100 minutes.</p>
+
         <h2 id="windows">Windows</h2>
 
         <p>Install <a href="http://www.microsoft.com/visualstudio/">Microsoft Visual C++</a>, either version 2010 or 2008 (the <a href="http://www.microsoft.com/visualstudio/en-us/products/2010-editions/express">Express edition</a> should work just fine).</p>
