--- a/download.html
+++ b/download.html
@@ -66,6 +66,7 @@
 
         <h2 id="windows">Windows</h2>
         <p>Download <a href="http://phantomjs.googlecode.com/files/phantomjs-1.8.2-windows.zip">phantomjs-1.8.2-windows.zip</a> (6.7 MB) and extract (unzip) the content.</p>
+        <p><strong>Note:</strong> 1.9.0 will be available soon. Please be patient.</p>
         <p>The executable <code>phantomjs.exe</code> is ready to use.</p>
         <p><strong>Note</strong>: For this static build, the binary is self-contained with no external dependency. It will run on a fresh install of Windows XP or later versions. There is no requirement to install Qt, WebKit, or any other libraries.</p>
 
