--- a/release-1.9.html
+++ b/release-1.9.html
@@ -94,50 +94,50 @@ table td,table th {
 <p><strong>New features</strong></p>
 
 <ul>
-    <li>Added spawn and execFile to execute external programs (issue 10219)</li>
-    <li>Added the ability to abort network requests (issue 10230)</li>
-    <li>Added system access to stdin, stdout, and stderr (issue 10333)</li>
-    <li>Added support for custom CA certificates location (issue 10916)</li>
-    <li>Added seek function to the File stream (issue 10937)</li>
-    <li>Implemented file read for a specified number of bytes (issue 10938)</li>
-    <li>Added a callback to handle network error (issue 10954, issue 10997)</li>
-    <li>Added custom encoding support when opening a page (issue 11043)</li>
-    <li>Implemented require.stub() support for a factory function (issue 11044)</li>
-    <li>Added page loading indicator and progress (issue 11091)</li>
-    <li>Added a timeout option for network requests (issue 11129)</li>
+    <li>Added spawn and execFile to execute external programs (issue <a href="https://github.com/ariya/phantomjs/issues/10219">10219</a>)</li>
+    <li>Added the ability to abort network requests (issue <a href="https://github.com/ariya/phantomjs/issues/10230">10230</a>)</li>
+    <li>Added system access to stdin, stdout, and stderr (issue <a href="https://github.com/ariya/phantomjs/issues/10333">10333</a>)</li>
+    <li>Added support for custom CA certificates location (issue <a href="https://github.com/ariya/phantomjs/issues/10916">10916</a>)</li>
+    <li>Added seek function to the File stream (issue <a href="https://github.com/ariya/phantomjs/issues/10937">10937</a>)</li>
+    <li>Implemented file read for a specified number of bytes (issue <a href="https://github.com/ariya/phantomjs/issues/10938">10938</a>)</li>
+    <li>Added a callback to handle network error (issue <a href="https://github.com/ariya/phantomjs/issues/10954">10954</a>,  <a href="https://github.com/ariya/phantomjs/issues/10997">1issue 10997</a>)</li>
+    <li>Added custom encoding support when opening a page (issue <a href="https://github.com/ariya/phantomjs/issues/11043">11043</a>)</li>
+    <li>Implemented require.stub() support for a factory function (issue <a href="https://github.com/ariya/phantomjs/issues/11044">11044</a>)</li>
+    <li>Added page loading indicator and progress (issue <a href="https://github.com/ariya/phantomjs/issues/11091">11091</a>)</li>
+    <li>Added a timeout option for network requests (issue <a href="https://github.com/ariya/phantomjs/issues/11129">11129</a>)</li>
 </ul>
 
 <p><strong>Improvements</strong></p>
 
 <ul>
-    <li>Fixed the build on FreeBSD (issue 10597)</li>
-    <li>Ensured a consistent 72 dpi for Linux headless rendering (issue 10659)</li>
-    <li>Fixed possible PDF error due to invalid CreationDate field (issue 10663)</li>
-    <li>Fixed crash when uploading non existing files (issue 10941)</li>
-    <li>Improved the autocomplete internal of the interactive/REPL mode (issue 10943)</li>
-    <li>Fixed possible crash when accessing inline frames (issue 10947)</li>
-    <li>Changed Linux binary package setup to be built on CentOS 5 (issue 10963)</li>
-    <li>Extended SSL ignore setting to synchronous XHR (issue 10985)</li>
-    <li>Added convenient constants for modifier keys (issue 11056)</li>
-    <li>Fixed incorrect date handling in the cookies (issue 11068)</li>
-    <li>Updated GhostDriver to version 1.0.3 (issue 11146)</li>
+    <li>Fixed the build on FreeBSD (issue <a href="https://github.com/ariya/phantomjs/issues/10597">10597</a>)</li>
+    <li>Ensured a consistent 72 dpi for Linux headless rendering (issue <a href="https://github.com/ariya/phantomjs/issues/10659">10659</a>)</li>
+    <li>Fixed possible PDF error due to invalid CreationDate field (issue <a href="https://github.com/ariya/phantomjs/issues/10663">10663</a>)</li>
+    <li>Fixed crash when uploading non existing files (issue <a href="https://github.com/ariya/phantomjs/issues/10941">10941</a>)</li>
+    <li>Improved the autocomplete internal of the interactive/REPL mode (issue <a href="https://github.com/ariya/phantomjs/issues/10943">10943</a>)</li>
+    <li>Fixed possible crash when accessing inline frames (issue <a href="https://github.com/ariya/phantomjs/issues/10947">10947</a>)</li>
+    <li>Changed Linux binary package setup to be built on CentOS 5 (issue <a href="https://github.com/ariya/phantomjs/issues/10963">10963</a>)</li>
+    <li>Extended SSL ignore setting to synchronous XHR (issue <a href="https://github.com/ariya/phantomjs/issues/10985">10985</a>)</li>
+    <li>Added convenient constants for modifier keys (issue <a href="https://github.com/ariya/phantomjs/issues/11056">11056</a>)</li>
+    <li>Fixed incorrect date handling in the cookies (issue <a href="https://github.com/ariya/phantomjs/issues/11068">11068</a>)</li>
+    <li>Updated GhostDriver to version 1.0.3 (issue <a href="https://github.com/ariya/phantomjs/issues/11146">11146</a>)</li>
 </ul>
 
 <p><strong>Examples</strong></p>
 
 <ul>
-    <li>Fixed invalid data URI in the netsniff example (issue 10740)</li>
-    <li>Implemented a new weather example (issue 10794)</li>
-    <li>Fixed rendering issues in render_multi_url (issue 11021)</li>
-    <li>Fixed proper event sequence in page_events example (issue 11028)</li>
-    <li>Miscellanous tweaks (issue 11082)</li>
+    <li>Fixed invalid data URI in the netsniff example (issue <a href="https://github.com/ariya/phantomjs/issues/10740">10740</a>)</li>
+    <li>Implemented a new weather example (issue <a href="https://github.com/ariya/phantomjs/issues/10794">10794</a>)</li>
+    <li>Fixed rendering issues in render_multi_url (issue <a href="https://github.com/ariya/phantomjs/issues/11021">11021</a>)</li>
+    <li>Fixed proper event sequence in page_events example (issue <a href="https://github.com/ariya/phantomjs/issues/11028">11028</a>)</li>
+    <li>Miscellanous tweaks (issue <a href="https://github.com/ariya/phantomjs/issues/11082">11082</a>)</li>
 </ul>
 
 <p><strong>Known Issues on Microsoft Windows</strong></p>
 
 <ul>
-    <li>Very slow network performance. The workaround is to set <a href="https://github.com/ariya/phantomjs/wiki/API-Reference#wiki-command-line-options">proxy type</a> to &quot;<tt>none</tt>&quot; (issue 10580)</li>
-    <li>Some graphics drivers may cause mysterious crash (issue 10845)</li>
+    <li>Very slow network performance. The workaround is to set <a href="https://github.com/ariya/phantomjs/wiki/API-Reference#wiki-command-line-options">proxy type</a> to &quot;<tt>none</tt>&quot; (issue <a href="https://github.com/ariya/phantomjs/issues/10580">10580</a>)</li>
+    <li>Some graphics drivers may cause mysterious crash (issue <a href="https://github.com/ariya/phantomjs/issues/10845">10845</a>)</li>
 </ul>
 
 <p>Back to <a href="releases.html">all releases</a>.</p>
@@ -154,4 +154,5 @@ table td,table th {
 </div>
 </body>
 </html>
+
 
