Remove my name since it becomes a truly group effort.

--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
             <p class="explanation">
                 PhantomJS is a headless WebKit scriptable with a JavaScript API.
                 It has <strong>fast</strong> and <strong>native</strong> support for various web standards: 
-                DOM handling, CSS selector, JSON, Canvas, and SVG.<br>
-                PhantomJS is created by <a href="http://twitter.com/AriyaHidayat">Ariya Hidayat</a>.
+                DOM handling, CSS selector, JSON, Canvas, and SVG.<br></a>
             </p>
             <p class="action">
                 <a href="download.html" id="download">Download <span class="version">v1.9</span></a>
