Issue #10939: Mention 1.9 as the last in the 1.x series.

--- a/release-1.9.html
+++ b/release-1.9.html
@@ -89,7 +89,12 @@ table td,table th {
 
 <p><strong>Note:</strong> The release notes are still being worked on, more information may become available in the next few days. Please bear with us!</p>
 
-<p>PhantomJS 1.9, <em><a href="release-names.html">Sakura</a></em>, was released on March 20, 2013.</p>
+<p>PhantomJS 1.9, <em><a href="release-names.html">Sakura</a></em>, was released on March 20, 2013. It came with an updated GhostDriver,
+an improved resource loading control, as well as other incremental improvements.</p>
+
+<p><strong>Note:</strong> PhantomJS 1.9 is the last release in the 1.x series. For the next 2.x series, the core implementation will be
+ported to <a href="http://qt-project.org/doc/qt-5.0/qtdoc/qt5-intro.html">Qt 5</a> to get a more modern base platform,
+as well as to have an updated WebKit module.</p>
 
 <p><strong>New features</strong></p>
 
