--- a/build.html
+++ b/build.html
@@ -103,7 +103,8 @@ git checkout 1.9
 
         <p><strong>Note 1</strong>: <code>build.sh</code> by default will launch parallel compile jobs depending on the available CPU cores, e.g. 4 jobs on a modern hyperthreaded dual-core processor. If necessary, e.g. when building on a virtual machine/server or other limited environment, reduce the jobs by passing a number, e.g <code>./build.sh --jobs 1</code> to set only one compile job at a time.</p>
 
-        <p><strong>Note 2</strong>: To create an RPM package (EC2 AMI, CentOS, or RHEL), run the following <em>after</em> a successful build:</p>
+        <p><strong>Note 2</strong>: To create an RPM package (EC2 AMI, CentOS, or RHEL), make sure <code>rpm-build</code> package is installed and then
+        run the following <em>after</em> a successful build:</p>
 <pre>
 cd rpm
 ./mkrpm.sh phantomjs 
