Add compile time on EC2 M1 Extra Large.
https://twitter.com/commuterjoy/status/325275746413187073

--- a/build.html
+++ b/build.html
@@ -110,7 +110,7 @@ cd rpm
 ./mkrpm.sh phantomjs 
 </pre>
 
-        <p><strong>Note 3</strong>: Compile time for Ubuntu 12.04 running on Amazon EC2 <em>M1 Large</em> (m1.large, 2 cores): 50 minutes, <em>M1 Medium</em> (m1.medium, 1 core): 100 minutes.</p>
+        <p><strong>Note 3</strong>: Compile time for Ubuntu 12.04 running on Amazon EC2 <em>M1 Extra Large</em> (m1.xlarge, 4 cores): 20 minutes, <em>M1 Large</em> (m1.large, 2 cores): 50 minutes, <em>M1 Medium</em> (m1.medium, 1 core): 100 minutes.</p>
 
         <h2 id="windows">Windows</h2>
 
