--- a/release-1.9.html
+++ b/release-1.9.html
@@ -138,6 +138,17 @@ as well as to have an updated WebKit module.</p>
     <li>Miscellanous tweaks (issue <a href="https://github.com/ariya/phantomjs/issues/11082">11082</a>)</li>
 </ul>
 
+<p><strong>Fixes in 1.9.1</strong></p>
+
+<ul>
+    <li>Fixed problems with specifying proxy server (issue <a href="https://github.com/ariya/phantomjs/issues/10811">10811</a>, <a href="https://github.com/ariya/phantomjs/issues/11117">11117</a>)</li>
+    <li>Fixed UTF-8 encoding with system.stdout and system.stderr (issue <a href="https://github.com/ariya/phantomjs/issues/11162">11162</a>)</li>
+    <li>Ensured that onResourceReceived will be always invoked (issue <a href="https://github.com/ariya/phantomjs/issues/11163">11163</a>)</li>
+    <li>Fixed module loading from an absolute path on Windows (issue <a href="https://github.com/ariya/phantomjs/issues/11165">11165</a>)</li>
+    <li>Fixed typo in the command-line option for setting the cache size (issue <a href="https://github.com/ariya/phantomjs/issues/11219">11219</a>)</li>
+    <li>Fixed possible crash when handling network requests (issue <a href="https://github.com/ariya/phantomjs/issues/11252">11252</a>, <a href="https://github.com/ariya/phantomjs/issues/11338">11338</a>)</li>
+</ul>
+
 <p><strong>Known Issues on Microsoft Windows</strong></p>
 
 <ul>
@@ -159,5 +170,4 @@ as well as to have an updated WebKit module.</p>
 </div>
 </body>
 </html>
-
 
