--- a/releases.html
+++ b/releases.html
@@ -76,6 +76,8 @@
 
 <div class="grid_10">
 
+    <p><a href="release-1.9.html">PhantomJS 1.9</a> "Sakura", was released on March 20, 2013. It came with an updated GhostDriver, an improved resource loading control, as well as other incremental improvements.</p>
+
     <p><a href="release-1.8.html">PhantomJS 1.8</a> "Blue Winter Rose", was released on December 21, 2012. It integrated GhostDriver, a remote WebDriver (Wire Protocol) implementation, and many related API addition.</p>
 
     <p><a href="release-1.7.html">PhantomJS 1.7</a> "Blazing Star", was released on September 22, 2012. It added module system support (modelled after CommonJS), better cookies handling, and other small improvements.</p>
