Explain why 1.9 is called Sakura.
Issue #10939 https://github.com/ariya/phantomjs/issues/10939

--- a/release-names.html
+++ b/release-names.html
@@ -78,6 +78,22 @@
 
     <div class="grid_10">
 
+        <h2>PhantomJS 1.9 "Sakura"</h2>
+
+<p><img src="http://farm6.static.flickr.com/5030/5607810834_3220056f56_m.jpg" align="right"></p>
+
+<p>Sakura is a spring flower, see Ariya's <a href="https://groups.google.com/d/msg/phantomjs/yM25jtdispo/dXbenqn-mvYJ">email on Mar 23, 2013</a>:</p>
+
+<blockquote>
+We do agree that this release should mark the end of the 1.x series.
+Going forward, we'll switch to Qt 5 and use the chance to boot the
+all-new 2.0. For such a closing release, it just makes sense to pick
+something related to the first code name ever given (exercise for the
+reader), hence why 1.9 is called "Sakura".
+</blockquote>
+
+<br clear="all"/>
+
         <h2>PhantomJS 1.8 "Blue Winter Rose"</h2>
 
 <p><a href="http://awoiaf.westeros.org/index.php/File:Blue_Roses1.jpg"><img src="http://awoiaf.westeros.org/images/8/83/Blue_Roses1.jpg" width="225" align="right"></a></p>
