--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@ title: PhantomJS
   <a href="http://twitter.github.com/bootstrap/">Bootstrap</a>,
   <a href="http://codemirror.net/">CodeMirror</a>,
   <a href="http://emberjs.com/">Ember.js</a>,
+  <a href="http://jquerymobile.com/">jQuery Mobile</a>,
   <a href="http://lesscss.org/">Less.js</a>,
   <a href="http://modernizr.com/">Modernizr</a>,
   <a href="http://yuilibrary.com/projects/yui3/">YUI3</a>,
