Don't link to the wiki pages anymore.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: PhantomJS
   <div>
     <p>
       Run functional tests with frameworks such as Jasmine, QUnit, Mocha, Capybara, WebDriver, and many others.
-      <a href="https://github.com/ariya/phantomjs/wiki/Headless-Testing">Learn more</a>
+      <a href="/headless-testing.html">Learn more</a>
     </p>
   </div>
 </div>
@@ -21,7 +21,7 @@ title: PhantomJS
     <p>
       Programmatically capture web contents, including SVG and Canvas.
       Create web site screenshots with thumbnail preview.
-      <a href="https://github.com/ariya/phantomjs/wiki/Screen-Capture">Learn more</a>
+      <a href="/screen-capture.html">Learn more</a>
     </p>
   </div>
 </div>
@@ -34,7 +34,7 @@ title: PhantomJS
       with the standard DOM API, or with
       usual libraries like jQuery.
       <br>
-      <a href="https://github.com/ariya/phantomjs/wiki/Page-Automation">Learn more</a>
+      <a href="/page-automation.html">Learn more</a>
     </p>
   </div>
 </div>
@@ -44,7 +44,7 @@ title: PhantomJS
   <div>
     <p>
       Monitor page loading and export as standard HAR files. Automate performance analysis using YSlow and Jenkins.
-      <a href="https://github.com/ariya/phantomjs/wiki/Network-Monitoring">Learn more</a>
+      <a href="/network-monitoring.html">Learn more</a>
     </p>
   </div>
 </div>
@@ -59,6 +59,6 @@ title: PhantomJS
   <a href="http://lesscss.org/">Less.js</a>,
   <a href="http://modernizr.com/">Modernizr</a>,
   <a href="http://yuilibrary.com/projects/yui3/">YUI3</a>,
-  and <a href="https://github.com/ariya/phantomjs/wiki/Users">many more</a>.
+  and <a href="/users.html">many more</a>.
   </p>
 </div>
