--- a/test/lib/www/load-images.html
+++ b/test/lib/www/load-images.html
@@ -1,6 +1,9 @@
+<!DOCTYPE html>
 <html>
+<head>
+</head>
 <body>
-    <img src="logo.png"/>
-    <img src="phantomjs.png"/>
+    <img src="logo.png" alt="logo">
+    <img src="phantomjs.png" alt="phantomjs">
 </body>
 </html>
